<resources>
    <!-- Common -->
    <string name="label_app_name">NeoLottery</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>

    <!-- Splash -->
    <string name="label_splash_gathering_data">Gathering data from the Server</string>

    <!-- Welcome -->
    <string name="label_welcome_greeting">Welcome to NeoLottery</string>

    <!-- Main -->
    <string name="label_main_greeting">NeoLottery, Have a good luck!</string>
    <string name="label_draw_number_title">Draw Number</string>
    <string name="label_empty_or_out_of_range_desc">Empty or Out of range.</string>
    <string name="label_generate_lottery">New Lottery</string>
    <string name="label_check_lottery">Check</string>
    <string name="label_draw_history">Draw History</string>
    <string name="label_frequently">Frequently</string>

    <!-- Win Dialog -->
    <string name="label_win_dialog_title">Win result</string>
    <string name="label_win_dialog_1st">Win 1st</string>
    <string name="label_win_dialog_2nd">Win 2nd</string>
    <string name="label_win_dialog_3rd">Win 3rd</string>
    <string name="label_win_dialog_4th">Win 4th</string>
    <string name="label_win_dialog_5th">Win 5th</string>
    <string name="label_win_dialog_losing">Losing ticket</string>

    <!-- History -->
    <string name="label_draw_number">No.</string>
    <string name="label_draw_lottery_numbers">Numbers</string>
    <string name="label_draw_bonus_number">Bonus</string>

    <!-- Retrieve -->
    <string name="label_retrieve_title">Retrieve Win Numbers (Deeplink)</string>
    <string name="label_retrieve_notice">Wrong draw number.\nPlease, Check input draw number.</string>

    <!-- Frequently -->
    <string name="label_frequently_title">Frequently Numbers</string>
    <string name="label_frequently_rank">Rank</string>
    <string name="label_frequently_number">Number</string>
    <string name="label_frequently_count">Count</string>

</resources>
