<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewmodel"
                type="com.github.haejung83.presentation.history.HistoryViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.history.HistoryActivity">

        <TextView
                android:text="@string/label_draw_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/text_history_title"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
                android:id="@+id/text_header_bonus_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_draw_bonus_number"
                app:layout_constraintTop_toTopOf="@+id/text_header_draw_number"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"
                android:padding="5dp" android:gravity="center"/>
        <TextView
                android:id="@+id/text_header_six_numbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_draw_lottery_numbers"
                app:layout_constraintTop_toTopOf="@+id/text_header_draw_number"
                app:layout_constraintStart_toEndOf="@+id/text_header_draw_number"
                app:layout_constraintBottom_toBottomOf="@+id/text_header_draw_number"
                app:layout_constraintEnd_toStartOf="@+id/text_header_bonus_number"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:padding="5dp" android:gravity="center"/>
        <TextView
                android:id="@+id/text_header_draw_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_draw_number"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:padding="5dp" app:layout_constraintTop_toBottomOf="@+id/text_history_title"
                android:gravity="center"/>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:viewModel="@{viewmodel}"
                app:items="@{viewmodel.items}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/text_header_draw_number" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>