<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewmodel"
                type="com.github.haejung83.presentation.frequently.FrequentlyViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.frequently.FrequentlyActivity">

        <TextView
                android:id="@+id/text_frequently_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/label_frequently_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/frequently_recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:viewModel="@{viewmodel}"
                app:items="@{viewmodel.items}"
                app:layout_constraintTop_toBottomOf="@+id/text_header_rank"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"/>
        <TextView
                android:id="@+id/text_header_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_frequently_rank"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text_frequently_title"
                app:layout_constraintStart_toStartOf="parent"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        <TextView
                android:id="@+id/text_header_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_frequently_number"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/text_header_rank"
                app:layout_constraintBottom_toBottomOf="@+id/text_header_rank"
                app:layout_constraintEnd_toStartOf="@+id/text_header_count"
                app:layout_constraintStart_toEndOf="@+id/text_header_rank"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        <TextView
                android:id="@+id/text_header_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_frequently_count"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toTopOf="@+id/text_header_rank"
                app:layout_constraintBottom_toBottomOf="@+id/text_header_rank"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>