<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="lottery"
                type="com.github.haejung83.data.local.Lottery"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/text_draw_number"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/label_draw_number"
                app:text_draw_number="@{lottery}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:padding="5dp" android:gravity="center" android:background="@color/primaryLightColor"/>
        <TextView
                android:id="@+id/text_draw_main_numbers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_draw_lottery_numbers"
                app:text_six_numbers="@{lottery}"
                app:layout_constraintTop_toTopOf="@+id/text_draw_number"
                app:layout_constraintBottom_toBottomOf="@+id/text_draw_number"
                app:layout_constraintStart_toEndOf="@+id/text_draw_number"
                app:layout_constraintEnd_toStartOf="@+id/text_draw_bonus_number"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="5dp" android:gravity="center" android:background="@color/primaryColor"/>
        <TextView
                android:id="@+id/text_draw_bonus_number"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/label_draw_bonus_number"
                app:text_bonus_number="@{lottery}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_draw_main_numbers"
                app:layout_constraintBottom_toBottomOf="@+id/text_draw_main_numbers"
                android:layout_marginEnd="16dp"
                android:padding="5dp" android:gravity="center" android:background="@color/primaryColor"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>