<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
                name="viewmodel"
                type="com.github.haejung83.presentation.retrieve.RetrieveViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.retrieve.RetrieveActivity">
        <TextView
                android:id="@+id/text_retrieve_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_retrieve_title"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/text_notice_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_retrieve_notice"
                android:visibility="@{!safeUnbox(viewmodel.isValidDrawNumber) ? View.VISIBLE : View.INVISIBLE}"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/text_retrieve_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center"
                android:textColor="@color/primaryDarkColor"
                android:textSize="18sp"/>
        <TextView
                android:id="@+id/text_retrieve_draw_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_draw_number_title"
                android:visibility="@{safeUnbox(viewmodel.isValidDrawNumber) ? View.VISIBLE : View.INVISIBLE}"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_1st"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
                android:id="@+id/text_retrieve_draw_number_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.drawNumber}"
                android:visibility="@{safeUnbox(viewmodel.isValidDrawNumber) ? View.VISIBLE : View.INVISIBLE}"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toEndOf="@+id/text_retrieve_draw_number_title"
                app:layout_constraintBaseline_toBaselineOf="@+id/text_retrieve_draw_number_title"/>
        <TextView
                android:id="@+id/text_retrieve_lottery_numbers"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:text="@{viewmodel.lotteryNumbers}"
                android:visibility="@{safeUnbox(viewmodel.isValidDrawNumber) ? View.VISIBLE : View.INVISIBLE}"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_retrieve_draw_number_value"
                app:layout_constraintEnd_toStartOf="@+id/text_retrieve_bonus_number"
                android:gravity="center"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@color/secondaryColor"/>
        <TextView
                android:id="@+id/text_retrieve_bonus_number"
                android:layout_width="54dp"
                android:layout_height="0dp"
                android:text="@{viewmodel.bonusNumber}"
                android:visibility="@{safeUnbox(viewmodel.isValidDrawNumber) ? View.VISIBLE : View.INVISIBLE}"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_retrieve_lottery_numbers"
                app:layout_constraintBottom_toBottomOf="@+id/text_retrieve_lottery_numbers"
                android:gravity="center"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:background="@color/secondaryColor"/>
        <View
                android:id="@+id/divider_1st"
                android:layout_width="395dp"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/text_notice_msg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>